# Internship-copilot

./: .gitignore  CLAUDE.md  Instructions.md  identity.example.toml  profile.toml  pyproject.toml
src/copilot/: __init__.py  __main__.py  applying.py  checking.py  descriptions.py  draft.py  llm.py  report.py  scoring.py  sources.py  storage.py
tests/: test_applying.py  test_descriptions.py  test_report.py  test_sources.py  test_storage.py
