[project]
name = "internship-copilot"
version = "0.1.0"
description = "Internship application co-pilot: aggregate, track, draft - human in control"
requires-python = ">=3.14"
dependencies = [
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
